<?xml version="1.0"?>
<package format="3">
  <name>astra_camera</name>
  <version>2.1.1</version>
  <description>Drivers for Orbbec Astra Devices. </description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>BSD</license>
  <author email="liuhua@orbbec.com">Tim Liu</author>

  <build_depend>git</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>boost</depend>
  <depend>builtin_interfaces</depend>
  <depend>libudev-dev</depend>
  <depend>libusb-1.0-dev</depend>  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
